@@ -1,3 +1,6 @@
+2021-04-01
+    * added SCM Revision to the about box
+
 2021-02-03
     * copyright years updated
 
